--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eth-gas-reporter/colors": "1.4.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.0",
     "@openzeppelin/contracts": "^4.5.0"
   },
   "devDependencies": {
