--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@utils/*": ["test/utils/*"],
       "@e2e/*": ["test/e2e/*"],
       "@unit/*": ["test/unit/*"],
+      "@test-utils/*": ["test/utils/*"],
       "@eth-sdk-types": ["node_modules/.dethcrypto/eth-sdk-client/esm/types"]
     }
   },
