--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "lint-staged": "12.0.0",
     "lodash": "4.17.21",
     "mocha": "9.1.4",
-    "moment": "2.29.1",
+    "moment": "^2.29.3",
     "pinst": "2.1.6",
     "prettier": "2.5.1",
     "prettier-plugin-solidity": "1.0.0-beta.19",
