--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "compile": "hardhat compile",
     "compile:test": "cross-env TEST=true hardhat compile",
-    "coverage": "hardhat coverage",
+    "coverage": "TEST=true hardhat coverage",
     "deploy": "npx hardhat deploy",
     "docs": "solidity-docgen --solc-module solc-0.8",
     "fork:node": "cross-env FORK=true hardhat node",
